`Update index.html to change "Explore" link and social media links to include target URLs and alt text.`

--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
                 Welcome to Maisha Afrika Adventures, where stunning landscapes and rich cultural experiences await you. Explore outdoor adventures, indulge in local cuisine, and immerse yourself in the vibrant traditions that make this destination truly unique.
 
             </p>
-            <a href="landingpage.html">Explore</a>
+            <a href="landing.html">Explore</a>
         </div>
 
         <ul class="social">
-            <li><img src="assets/facebook.png" alt=""></li>
-            <li><img src="assets/x.png" alt=""></li>
-            <li><img src="assets/instagram.png" alt=""></li>
+            <li><a href="https://www.facebook.com" target="_blank"><img src="assets/facebook.png" alt="Facebook"></a></li>
+            <li><a href="https://www.twitter.com" target="_blank"><img src="assets/x.png" alt="Twitter"></a></li>
+            <li><a href="https://www.instagram.com" target="_blank"><img src="assets/instagram.png" alt="Instagram"></a></li>
         </ul>
+        
     </section>
 
     <div class="menu"> 
