--- a/landing.html
+++ b/landing.html
@@ -8,8 +8,19 @@
     <title>Maisha Afrika Adventures - Explore the Wild</title>
 </head>
 <body>
+    <!-- Navigation Section -->
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html" class="nav-link">Home</a></li>
+            <li><a href="#offers" class="nav-link">About Us</a></li>
+            <li><a href="destination.html" class="nav-link">Destinations</a></li>
+            <li><a href="about.html" class="nav-link">Camps & Hotels</a></li>
+            <li><a href="#contact" class="nav-link">Blog</a></li>
+        </ul>
+    </nav>
+
     <!-- Hero Section with Background Video -->
-    <section class="hero">
+    <section class="hero" id="home">
         <video autoplay muted loop id="bg-video">
             <source src="assets/WhatsApp Video 2024-12-31 at 14.54.43_a49f8530.mp4" type="video/mp4">
         </video>
@@ -32,43 +43,8 @@
         </div>
     </section>
 
-    <!-- Alternating Image and Text Section 2 -->
-    <section class="alternating-section">
-        <div class="content">
-            <div class="text">
-                <h2>Mountain Treks</h2>
-                <p>Scale the peaks of Africa's iconic mountains and enjoy breathtaking views.</p>
-                <a href="#blog" class="cta-btn">Explore Our Blog</a>
-            </div>
-            <img src="assets/trek.jpg" alt="Mountain Trek">
-        </div>
-    </section>
+    <!-- Rest of the content remains the same -->
 
-    <!-- Alternating Image and Text Section 3 - About Us Section -->
-    <section class="alternating-section">
-        <div class="content">
-            <img src="assets/about.jpg" alt="About Maisha Afrika Adventures">
-            <div class="text">
-                <h2>About Us</h2>
-                <p>At Maisha Afrika Adventures, we are passionate about offering you an authentic African experience. Whether it’s a safari, a mountain trek, or a cultural immersion, our mission is to connect you with the heart of Africa.</p>
-                <a href="about.html" class="cta-btn">Learn More About Us</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- Alternating Image and Text Section 4 -->
-    <section class="alternating-section">
-        <div class="content">
-            <img src="assets/R.jpg" alt="Cultural Experience">
-            <div class="text">
-                <h2>Cultural Experiences</h2>
-                <p>Immerse yourself in the vibrant cultures and traditions of Africa.</p>
-                <a href="#offers" class="cta-btn">Check Offers</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer Section -->
     <footer>
         <p>&copy; 2024 Maisha Afrika Adventures. All Rights Reserved.</p>
         <ul class="social-links">
