--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="toggle"></div>
         </header>
 
-        <video src="assets/indexvideo.mp4" muted loop autoplay></video> 
+        <video src="assets/background.mp4" muted loop autoplay></video> 
 
         <div class="overlay"></div>
 
