--- a/landing.html
+++ b/landing.html
@@ -11,7 +11,7 @@
     <!-- Navigation Section -->
     <nav class="navbar">
         <ul>
-            <li><a href="index.html" class="nav-link">Home</a></li>
+            <li><a href="landing.html" class="nav-link">Home</a></li>
             <li><a href="about.html" class="nav-link">About Us</a></li>
             <li><a href="destination.html" class="nav-link">Destinations</a></li>
             <li><a href="camps.html" class="nav-link">Camps & Hotels</a></li>
