--- a/landing.html
+++ b/landing.html
@@ -16,6 +16,9 @@
             <li><a href="destination.html" class="nav-link">Destinations</a></li>
             <li><a href="camps.html" class="nav-link">Camps & Hotels</a></li>
             <li><a href="blog.html" class="nav-link">Blog</a></li>
+			<li><a href="tours.html" class="nav-link">Tours</a></li>
+			<li><a href="packages.html" class="nav-link">Packages</a></li>
+			<li><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
     </nav>
 
