updated the blog stlying

--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Travel stories, tips, and news from Maisha Afrika Adventures">
 	<meta name="keywords" content="africa travel, safari blog, travel tips, african adventures">
-	<link rel="stylesheet" href="css/index-style.css">
+	<link rel="stylesheet" href="css/index-styles.css">
 	<link rel="stylesheet" href="css/blog-style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 	<title>Travel Blog - Maisha Afrika Adventures</title>
