code structure changes

--- a/accommodations.html
+++ b/accommodations.html
@@ -13,7 +13,7 @@
 		<div class="logo">Maisha Afrika</div>
 		<div class="nav-links">
 			<a href="index.html">Home</a>
-			<a href="destinations.html" class="active">Destinations</a>
+			<a href="accommodations.html" class="active">Accommodations</a>
 			<a href="tours.html">Tours</a>
 			<a href="about.html">About</a>
 			<a href="destinations.html">Destinations</a>
