--- a/blog.html
+++ b/blog.html
@@ -15,11 +15,11 @@
 		<div class="logo">Maisha Afrika</div>
 		<div class="nav-links">
 			<a href="index.html">Home</a>
-			<a href="destinations.html" class="active">Destinations</a>
+			<a href="destinations.html">Destinations</a>
 			<a href="tours.html">Tours</a>
 			<a href="about.html">About</a>
-			<a href="destinations.html">Destinations</a>
 			<a href="packages.html">Packages</a>
+            <a href="accommodations.html">Accommodation</a>
 			<a href="blog.html" class="active">Blog</a>
 			<a href="contact.html">Contact</a>
 		</div>
