--- a/landing.html
+++ b/landing.html
@@ -13,10 +13,11 @@
         <ul>
             <li><a href="landing.html" class="nav-link">Home</a></li>
             <li><a href="about.html" class="nav-link">About Us</a></li>
-            <li><a href="destination.html" class="nav-link">Destinations</a></li>
+            <li><a href="destinations.html" class="nav-link">Destinations</a></li>
             <li><a href="camps.html" class="nav-link">Camps & Hotels</a></li>
             <li><a href="blog.html" class="nav-link">Blog</a></li>
 			<li><a href="tours.html" class="nav-link">Tours</a></li>
+            <li><a href="accommodations.html">Accommodation</a></li>
 			<li><a href="packages.html" class="nav-link">Packages</a></li>
 			<li><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
