--- a/packages.html
+++ b/packages.html
@@ -13,9 +13,12 @@
 		<div class="logo">Maisha Afrika</div>
 		<div class="nav-links">
 			<a href="index.html">Home</a>
-			<a href="destinations.html">Destinations</a>
-			<a href="packages.html" class="active">Packages</a>
+			<a href="destinations.html" class="active">Destinations</a>
+			<a href="tours.html">Tours</a>
 			<a href="about.html">About</a>
+			<a href="accommodations.html">Accommodation</a>
+			<a href="packages.html" class="active">Packages</a>
+			<a href="blog.html" >Blog</a>
 			<a href="contact.html">Contact</a>
 		</div>
 		<div class="toggle" aria-label="Toggle navigation menu"></div>
