--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 			<a href="destinations.html" class="active">Destinations</a>
 			<a href="tours.html">Tours</a>
 			<a href="about.html">About</a>
-			<a href="destinations.html">Destinations</a>
+			<a href="accommodations.html">Accommodation</a>
 			<a href="packages.html">Packages</a>
 			<a href="blog.html" class="active">Blog</a>
 			<a href="contact.html">Contact</a>
