--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,9 @@
 			<a href="destinations.html">Destinations</a>
 			<a href="tours.html">Tours</a>
 			<a href="about.html">About</a>
-			<a href="destinations.html">Destinations</a>
+			<a href="accommodations.html">Accommodation</a>
 			<a href="packages.html">Packages</a>
-			<a href="blog.html" class="active">Blog</a>
+			<a href="blog.html" >Blog</a>
 			<a href="contact.html" class="active">Contact</a>
 		</div>
 		<div class="toggle"></div>
