--- a/about.html
+++ b/about.html
@@ -181,6 +181,7 @@
 		</div>
 	</footer>
 
-	<script src="js/index.js"></script>
+	<!-- <script src="js/index.js"></script> -->
+	<script src="js/about.js"></script>
 </body>
 </html>
