set the home button to refer to landing.html

--- a/accommodations.html
+++ b/accommodations.html
@@ -12,7 +12,7 @@
 	<nav class="navbar">
 		<div class="logo">Maisha Afrika</div>
 		<div class="nav-links">
-			<a href="index.html">Home</a>
+			<a href="landing.html">Home</a>
 			<a href="accommodations.html" class="active">Accommodations</a>
 			<a href="tours.html">Tours</a>
 			<a href="about.html">About</a>
