--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
 	<nav class="navbar">
 		<div class="logo">Maisha Afrika</div>
 		<div class="nav-links">
-			<a href="index.html">Home</a>
+			<a href="landing.html">Home</a>
 			<a href="destinations.html">Destinations</a>
 			<a href="tours.html">Tours</a>
 			<a href="about.html">About</a>
