--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
     <div class="menu"> 
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="landing.html">Home</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </div> 
 
