--- a/about.html
+++ b/about.html
@@ -165,13 +165,13 @@
 				<h3>Follow Us</h3>
 				<div class="social-links">
 					<a href="#" title="Facebook" aria-label="Visit our Facebook page">
-						<i class="fab fa-facebook" aria-hidden="true"></i>
+						<i class="fab fa-facebook" aria-hidden="false"></i>
 					</a>
 					<a href="#" title="Twitter" aria-label="Visit our Twitter page">
-						<i class="fab fa-twitter" aria-hidden="true"></i>
+						<i class="fab fa-twitter" aria-hidden="false"></i>
 					</a>
 					<a href="#" title="Instagram" aria-label="Visit our Instagram page">
-						<i class="fab fa-instagram" aria-hidden="true"></i>
+						<i class="fab fa-instagram" aria-hidden="false"></i>
 					</a>
 				</div>
 			</div>
