--- a/landing.html
+++ b/landing.html
@@ -26,7 +26,7 @@
     <!-- Hero Section with Background Video -->
     <section class="hero" id="home">
         <video autoplay muted loop id="bg-video">
-            <source src="assets/bgd-video.mp4" type="video/mp4">
+            <source src="assets/africa-adventure.mp4" type="video/mp4">
         </video>
         <div class="hero-content">
             <h1>Maisha Afrika Adventures</h1>
