--- a/landing.html
+++ b/landing.html
@@ -11,23 +11,24 @@
     <!-- Navigation Section -->
     <nav class="navbar">
         <ul>
-            <li><a href="landing.html" class="nav-link">Home</a></li>
-            <li><a href="about.html" class="nav-link">About Us</a></li>
+            <li><a href="landing.html" class="nav-link active">Home</a></li>
+            <li><a href="about.html" class="nav-link">About</a></li>
             <li><a href="destinations.html" class="nav-link">Destinations</a></li>
-            <li><a href="camps.html" class="nav-link">Camps & Hotels</a></li>
+            <li><a href="camps.html" class="nav-link">Camps&Hotels</a></li>
             <li><a href="blog.html" class="nav-link">Blog</a></li>
-			<li><a href="tours.html" class="nav-link">Tours</a></li>
-            <li><a href="accommodations.html">Accommodation</a></li>
-			<li><a href="packages.html" class="nav-link">Packages</a></li>
-			<li><a href="contact.html" class="nav-link">Contact</a></li>
+            <li><a href="tours.html" class="nav-link">Tours</a></li>
+            <li><a href="accommodations.html" class="nav-link">Accommodation</a></li>
+            <li><a href="packages.html" class="nav-link">Packages</a></li>
+            <li><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
     </nav>
 
-    <!-- Hero Section with Background Video -->
+    <!-- Hero Section with Background Video and Logo -->
     <section class="hero" id="home">
         <video autoplay muted loop id="bg-video">
             <source src="assets/bgd-video.mp4" type="video/mp4">
         </video>
+       
         <div class="hero-content">
             <h1>Maisha Afrika Adventures</h1>
             <h2>Discover Africa's Unmatched Beauty</h2>
@@ -47,39 +48,29 @@
         </div>
     </section>
 
- <!-- Alternating Image and Text Section 2 -->
- <section class="alternating-section">
-    <div class="content">
-        <div class="text">
-            <h2>Mountain Treks</h2>
-            <p>Scale the peaks of Africa's iconic mountains and enjoy breathtaking views.</p>
-            <a href="#blog" class="cta-btn">Explore Our Blog</a>
+    <!-- Alternating Image and Text Section 2 -->
+    <section class="alternating-section">
+        <div class="content">
+            <div class="text">
+                <h2>Mountain Treks</h2>
+                <p>Scale the peaks of Africa's iconic mountains and enjoy breathtaking views.</p>
+                <a href="#blog" class="cta-btn">Explore Our Blog</a>
+            </div>
+            <img src="assets/trek.jpg" alt="Mountain Trek">
         </div>
-        <img src="assets/trek.jpg" alt="Mountain Trek">
-    </div>
-</section>
-<!-- Alternating Image and Text Section 3 - About Us Section -->
-<section class="alternating-section">
-    <div class="content">
-        <img src="assets/about.jpg" alt="About Maisha Afrika Adventures">
-        <div class="text">
-            <h2>About Us</h2>
-            <p>At Maisha Afrika Adventures, we are passionate about offering you an authentic African experience. Whether it’s a safari, a mountain trek, or a cultural immersion, our mission is to connect you with the heart of Africa.</p>
-            <a href="about.html" class="cta-btn">Learn More About Us</a>
+    </section>
+
+    <!-- Alternating Image and Text Section 3 - About Us Section -->
+    <section class="alternating-section">
+        <div class="content">
+            <img src="assets/about.jpg" alt="About Maisha Afrika Adventures">
+            <div class="text">
+                <h2>About Us</h2>
+                <p>At Maisha Afrika Adventures, we are passionate about offering you an authentic African experience.</p>
+                <a href="about.html" class="cta-btn">Learn More About Us</a>
+            </div>
         </div>
-    </div>
-</section>
-<!-- Alternating Image and Text Section 4 -->
-<section class="alternating-section">
-    <div class="content">
-        <img src="assets/R.jpg" alt="Cultural Experience">
-        <div class="text">
-            <h2>Cultural Experiences</h2>
-            <p>Immerse yourself in the vibrant cultures and traditions of Africa.</p>
-            <a href="#offers" class="cta-btn">Check Offers</a>
-        </div>
-    </div>
-</section>
+    </section>
 
     <footer>
         <p>&copy; 2024 Maisha Afrika Adventures. All Rights Reserved.</p>
