Footer styling and about page update

--- a/about.html
+++ b/about.html
@@ -30,5 +30,122 @@
             <h2>Discover the passion behind Maisha Afrika Adventures</h2>
         </div>
     </section>
+
+    <!-- About Section -->
+    <section class="about-section">
+        <div class="about-content">
+            <div class="about-text">
+                <h1>Discover Who We Are: Unveiling the Essence of MaishaAfrika</h1>
+                <p>
+                    MaishaAfrika is more than just a travel company; we are a gateway to authentic African experiences.
+                    From breathtaking landscapes to rich cultural heritage, we strive to connect travelers with the
+                    heart and soul of Africa. Join us as we delve into the story behind MaishaAfrika and what makes our
+                    journey so special. Derived from the Swahili word for "life," Maisha embodies the essence of vibrant and 
+                    unforgettable African experiences. 
+                    <br><br>
+                    We specialize in safari and adventure packages across Tanzania, Kenya, Uganda, and Rwanda, 
+                    whether it's climbing Mount Kilimanjaro, exploring wildlife, or relaxing on Zanzibar's pristine beaches.
+                    <br><br>
+                    Beyond adventure, we connect with local communities—the Datoga and Hadzabe tribes near Lake Eyasi, 
+                    and the Maasai people in Manyara. These interactions offer deep, immersive experiences.
+                </p>
+            </div>
+            <div class="about-image">
+                <img src="assets/life1.jpg" alt="Symbol of Life">
+            </div>
+        </div>
+    </section>
+
+    <!-- Preview Section: A Glimpse of Africa's Wonders -->
+<section class="africa-wonders-section">
+    <h1>A Glimpse of Africa's Wonders</h1>
+    <p>Discover the breathtaking beauty and diverse experiences that await you. From the serene Zanzibar beaches to thrilling safaris and cultural immersions, MaishaAfrika offers unforgettable adventures.</p>
+
+    <div class="wonder-grid">
+        <!-- Zanzibar Beaches -->
+        <div class="wonder-item">
+            <img src="assets/beach.jpg" alt="Zanzibar Beach">
+            <h2>Zanzibar Beaches</h2>
+            <p>Relax on the pristine shores of Zanzibar, where white sand meets crystal-clear waters. The perfect tropical escape.</p>
+            <a href="#" class="cta-btn">Explore Beaches</a>
+        </div>
+
+        <!-- Camps & Hotels -->
+        <div class="wonder-item">
+            <img src="assets/hotel.jpg" alt="Camps and Hotels">
+            <h2>Camps & Hotels</h2>
+            <p>Stay in luxurious safari camps or cozy hotels that blend comfort with nature, ensuring a restful and immersive experience.</p>
+            <a href="#" class="cta-btn">Discover Camps</a>
+        </div>
+
+        <!-- Safaris -->
+        <div class="wonder-item">
+            <img src="assets/safari-guide.jpg" alt="Safari Adventure">
+            <h2>Safari Adventures</h2>
+            <p>Embark on thrilling safaris through Kenya, Tanzania, and Uganda, witnessing majestic wildlife in their natural habitats.</p>
+            <a href="#" class="cta-btn">Book a Safari</a>
+        </div>
+
+        <!-- Treks -->
+        <div class="wonder-item">
+            <img src="assets/mount-meru6.jpg" alt="Mountain Treks">
+            <h2>Mountain Treks</h2>
+            <p>Conquer the peaks of Mount Kilimanjaro and Mount Meru, experiencing the adventure of a lifetime with breathtaking views.</p>
+            <a href="#" class="cta-btn">Start Your Trek</a>
+        </div>
+
+        <!-- Culture -->
+        <div class="wonder-item">
+            <img src="assets/tz.jpg" alt="Cultural Immersion">
+            <h2>Cultural Immersion</h2>
+            <p>Engage with local tribes like the Maasai, Hadzabe, and Datoga, and explore their rich traditions and way of life.</p>
+            <a href="#" class="cta-btn">Experience Culture</a>
+        </div>
+    </div>
+</section>
+
+<!-- Footer Section -->
+<footer class="footer">
+    <div class="footer-content">
+        <div class="footer-column">
+            <h3>About Us</h3>
+            <p>Maisha Afrika Adventures is your gateway to unforgettable African safaris, cultural experiences, and breathtaking landscapes. Join us and discover the essence of life through adventure.</p>
+        </div>
+
+        <div class="footer-column">
+            <h3>Quick Links</h3>
+            <ul class="footer-links">
+                <li><a href="landing.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="destinations.html">Destinations</a></li>
+                <li><a href="tours.html">Tours</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-column">
+            <h3>Contact Us</h3>
+            <p><i class="fas fa-map-marker-alt"></i> Nairobi, Kenya</p>
+            <p><i class="fas fa-phone"></i> +254 712 345 678</p>
+            <p><i class="fas fa-envelope"></i> info@maishaafrika.com</p>
+        </div>
+
+        <div class="footer-column">
+            <h3>Follow Us</h3>
+            <div class="social-links">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+            </div>
+        </div>
+    </div>
+    
+    <div class="footer-bottom">
+        <p>&copy; 2025 Maisha Afrika Adventures. All Rights Reserved.</p>
+    </div>
+</footer>
+
+
 </body>
 </html>
