--- a/landing.html
+++ b/landing.html
@@ -72,14 +72,48 @@
         </div>
     </section>
 
-    <footer>
-        <p>&copy; 2024 Maisha Afrika Adventures. All Rights Reserved.</p>
-        <ul class="social-links">
-            <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
-            <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
-            <li><a href="https://www.twitter.com" target="_blank">Twitter</a></li>
-        </ul>
-    </footer>
+    <!-- Footer Section -->
+<footer class="footer">
+    <div class="footer-content">
+        <div class="footer-column">
+            <h3>About Us</h3>
+            <p>Maisha Afrika Adventures is your gateway to unforgettable African safaris, cultural experiences, and breathtaking landscapes. Join us and discover the essence of life through adventure.</p>
+        </div>
+
+        <div class="footer-column">
+            <h3>Quick Links</h3>
+            <ul class="footer-links">
+                <li><a href="landing.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="destinations.html">Destinations</a></li>
+                <li><a href="tours.html">Tours</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-column">
+            <h3>Contact Us</h3>
+            <p><i class="fas fa-map-marker-alt"></i> Nairobi, Kenya</p>
+            <p><i class="fas fa-phone"></i> +254 712 345 678</p>
+            <p><i class="fas fa-envelope"></i> info@maishaafrika.com</p>
+        </div>
+
+        <div class="footer-column">
+            <h3>Follow Us</h3>
+            <div class="social-links">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+            </div>
+        </div>
+    </div>
+    
+    <div class="footer-bottom">
+        <p>&copy; 2025 Maisha Afrika Adventures. All Rights Reserved.</p>
+    </div>
+</footer>
+
 
     <script src="js/scroll-animations.js"></script>
 </body>
