`Updated navigation menu and contact page layout`

--- a/about.html
+++ b/about.html
@@ -14,10 +14,9 @@
             <li><a href="landing.html" class="nav-link">Home</a></li>
             <li><a href="about.html" class="nav-link active">About</a></li>
             <li><a href="destinations.html" class="nav-link">Destinations</a></li>
-            <li><a href="camps.html" class="nav-link">Camps&Hotels</a></li>
+            <li><a href="accommodations.html" class="nav-link">Accommodation</a></li>
             <li><a href="blog.html" class="nav-link">Blog</a></li>
             <li><a href="tours.html" class="nav-link">Tours</a></li>
-            <li><a href="accommodations.html" class="nav-link">Accommodation</a></li>
             <li><a href="packages.html" class="nav-link">Packages</a></li>
             <li><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
@@ -67,7 +66,7 @@
             <img src="assets/beach.jpg" alt="Zanzibar Beach">
             <h2>Zanzibar Beaches</h2>
             <p>Relax on the pristine shores of Zanzibar, where white sand meets crystal-clear waters. The perfect tropical escape.</p>
-            <a href="#" class="cta-btn">Explore Beaches</a>
+            <a href="packages.html" class="cta-btn">Explore Beaches</a>
         </div>
 
         <!-- Camps & Hotels -->
@@ -75,7 +74,7 @@
             <img src="assets/hotel.jpg" alt="Camps and Hotels">
             <h2>Camps & Hotels</h2>
             <p>Stay in luxurious safari camps or cozy hotels that blend comfort with nature, ensuring a restful and immersive experience.</p>
-            <a href="#" class="cta-btn">Discover Camps</a>
+            <a href="packages.html" class="cta-btn">Discover Camps</a>
         </div>
 
         <!-- Safaris -->
@@ -83,7 +82,7 @@
             <img src="assets/safari-guide.jpg" alt="Safari Adventure">
             <h2>Safari Adventures</h2>
             <p>Embark on thrilling safaris through Kenya, Tanzania, and Uganda, witnessing majestic wildlife in their natural habitats.</p>
-            <a href="#" class="cta-btn">Book a Safari</a>
+            <a href="contact.html" class="cta-btn">Book a Safari</a>
         </div>
 
         <!-- Treks -->
@@ -91,7 +90,7 @@
             <img src="assets/mount-meru6.jpg" alt="Mountain Treks">
             <h2>Mountain Treks</h2>
             <p>Conquer the peaks of Mount Kilimanjaro and Mount Meru, experiencing the adventure of a lifetime with breathtaking views.</p>
-            <a href="#" class="cta-btn">Start Your Trek</a>
+            <a href="destinations.html" class="cta-btn">Start Your Trek</a>
         </div>
 
         <!-- Culture -->
@@ -99,7 +98,7 @@
             <img src="assets/tz.jpg" alt="Cultural Immersion">
             <h2>Cultural Immersion</h2>
             <p>Engage with local tribes like the Maasai, Hadzabe, and Datoga, and explore their rich traditions and way of life.</p>
-            <a href="#" class="cta-btn">Experience Culture</a>
+            <a href="blog.html" class="cta-btn">Experience Culture</a>
         </div>
     </div>
 </section>
